--- a/my.css
+++ b/my.css
@@ -1,3 +1,26 @@
+.layout_post>#post {
+    background: rgba(255,255,255,.3);
+    background-image: initial;
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    background-repeat-x: initial;
+    background-repeat-y: initial;
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+
+    background-color: rgba(38, 227, 26, 0.15);
+
+/*
+	
+    background-color: rgba(255, 255, 255, 0.3);
+
+*/
+
+}
+
+
 #recent-posts > 
 .recent-post-item:hover {
     height: 102px;
@@ -46,7 +69,7 @@ table {
     animation-direction: alternate;
     animation-fill-mode: none;
     animation-play-state: running;
-    animation-name: link_custom;
+    animation-name: my_custom;
 }
 
 @keyframes my_custom1 {
@@ -146,4 +169,6 @@ table {
     rgba(7, 179, 155, 0.1) 86%,
     rgba(109, 186, 130, 0.1) 100%
   );
+  
+}
 }
